Fix Navbar  (#4117)
* Initial commit

* Improve Navbar dropdown + fix mobile

* Add padding to logo

* esf

* Add collapse on select

* Cleanup CSS

* Fix nav menu overflowing

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -19,9 +19,29 @@ body {
   background: whitesmoke;
 }
 
-.header {
+#navbar {
   height: $header-height;
   background: white;
+
+  .navbar-toggler {
+    &:active {
+      outline: none !important;
+      box-shadow: none;
+    }
+    &:focus {
+      outline: none !important;
+      box-shadow: none;
+    }
+  }
+}
+
+#navbar-menu {
+  z-index: 10;
+  top: 100%;
+
+  a {
+    color: $black !important;
+  }
 }
 
 .background-sm-buffer {
